@@ -1,16 +1,16 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.3-7
-Date: 2014-11-12
-Packaged: 2014-11-12; dylan
+Version: 1.4
+Date: 2014-11-13
+Packaged: 2014-11-13; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
 License: GPL (>= 2)
 LazyLoad: yes
 Depends: R (>= 2.15.0)
-Imports: plyr, Hmisc, RCurl, XML, raster, rgdal, RODBC, sp, aqp
-Suggests: lattice, XMLSchema, SSOAP, dismo
+Imports: plyr, Hmisc, RCurl, XML, sp, aqp
+Suggests: lattice, XMLSchema, SSOAP, dismo, raster, RODBC, rgdal
 Repository: CRAN
 URL: http://aqp.r-forge.r-project.org/
