@@ -1,6 +1,10 @@
 
 # gets all veg records per site ID
 get_veg_from_AK_Site <- function(dsn) {
+  # must have RODBC installed
+  if(!require(RODBC))
+    stop('please install the `RODBC` package', call.=FALSE)
+  
 	# basic query
 	q <- "SELECT VegStop.usiteid as site_id, VegStop.fECOSITE as ecosite, localplant.lplantsym as plantsym, localplant.lplantname as plantname, vegetation.COVER as pct_cover
   FROM 
